Massive tidy up - 100% javadoc'd, improved comments and many code violations reported by Sonar. Swapped inheritence of Required and RequireHashCode to simplify deletion of Required later on. Deprecated StrRegExReplace. Fixed chaining in StrForbidden constructor.
git-svn-id: http://svn.code.sf.net/p/supercsv/code/trunk@222 01ba9438-b82c-4373-9247-da971c9e6a59