@@ -2,21 +2,30 @@ package org.supercsv.cellprocessor;
 
 import org.supercsv.cellprocessor.ift.LongCellProcessor;
 import org.supercsv.cellprocessor.ift.StringCellProcessor;
-import org.supercsv.exception.NullInputException;
 import org.supercsv.exception.SuperCSVException;
 import org.supercsv.util.CSVContext;
 
 /**
- * Convert a string to an integer
+ * Converts a String to an Integer.
  * 
  * @author Kasper B. Graversen
  */
 public class ParseInt extends CellProcessorAdaptor implements StringCellProcessor {
 	
+	/**
+	 * Constructs a new <tt>ParseInt</tt> processor, which converts a String to an Integer.
+	 */
 	public ParseInt() {
 		super();
 	}
 	
+	/**
+	 * Constructs a new <tt>ParseInt</tt> processor, which converts a String to an Integer, then calls the next
+	 * processor in the chain.
+	 * 
+	 * @param next
+	 *            the next processor in the chain
+	 */
 	public ParseInt(final LongCellProcessor next) {
 		super(next);
 	}
@@ -24,18 +33,15 @@ public class ParseInt extends CellProcessorAdaptor implements StringCellProcesso
 	/**
 	 * {@inheritDoc}
 	 */
-	@Override
-	public Object execute(final Object value, final CSVContext context) throws SuperCSVException {
-		if( value == null ) {
-			throw new NullInputException("Input cannot be null on line " + context.lineNumber + " at column "
-				+ context.columnNumber, context, this);
-		}
+	public Object execute(final Object value, final CSVContext context) {
+		validateInputNotNull(value, context, this);
+		
 		final Integer result;
 		if( value instanceof Integer ) {
 			result = (Integer) value;
 		} else if( value instanceof String ) {
 			try {
-				result = new Integer((String) value);
+				result = Integer.valueOf((String) value);
 			}
 			catch(final NumberFormatException e) {
 				throw new SuperCSVException("Parser error", context, this, e);
